# blackbox

./: .gitignore  README.md  package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.js  vite.config.ts
.github/workflows/: main.yml
data/: blackbox.db  blackbox.db-shm  blackbox.db-wal
src/: App.tsx  Layout.tsx  app.css  app.html  index.css  main.tsx
src-tauri/: .gitignore  Cargo.toml  database.db  db.db  diesel.toml  tauri.conf.json
src-tauri/data/: blackbox.db  blackbox.db-shm  blackbox.db-wal
src-tauri/icons/: icon.icns
src-tauri/migrations/2024-10-14-034118_create_private_keys/: down.sql  up.sql
src-tauri/migrations/2024-10-14-193959_create_public_keys/: down.sql  up.sql
src-tauri/migrations/2025-01-31-032654_monero_wallet/: up.sql
src-tauri/migrations/2025-06-21-064531_create_keys/: down.sql  up.sql
src-tauri/src/: db.rs  lib.rs  monero.rs  schema.rs
src-tauri/src/functions/: auth.rs  decrypt.rs  encrypt.rs  generate.rs  mod.rs  private_keys.rs  public_keys.rs  wallet.rs
src-tauri/src/models/: mod.rs
src/components/: app-sidebar.tsx  header.tsx  nav-main.tsx  nav-user.tsx
src/components/mod-ui/: copy-text-area.tsx
src/components/organisms/: Identity.tsx
src/components/ui/: sidebar.tsx
src/hooks/: use-keys.tsx
src/layouts/: DashLayout.tsx  MainLayout.tsx
src/lib/: api.ts  helper.ts  types.ts
src/lib/api/: database.ts  monero.ts  pgp.ts  types.ts
src/lib/custom-components/: TextArea2.svelte
src/routes/: +layout.svelte  +page.svelte  HomePage.tsx  unlock.tsx
src/routes/(unlocked)/: +layout.svelte
(+20 files in other folders)
